Updated annotations for mvc controllers