@@ -30,10 +30,14 @@ import dk.digitalidentity.model.entity.kle.KLEGroup;
 import dk.digitalidentity.model.entity.kle.KLELegalReference;
 import dk.digitalidentity.model.entity.kle.KLEMainGroup;
 import dk.digitalidentity.model.entity.kle.KLESubject;
-import dk.digitalidentity.security.annotations.RequireSuperuserOrAdministrator;
-import dk.digitalidentity.security.RequireUser;
 import dk.digitalidentity.security.Roles;
 import dk.digitalidentity.security.SecurityUtil;
+import dk.digitalidentity.security.annotations.crud.RequireCreateOwnerOnly;
+import dk.digitalidentity.security.annotations.crud.RequireDeleteAll;
+import dk.digitalidentity.security.annotations.crud.RequireReadOwnerOnly;
+import dk.digitalidentity.security.annotations.crud.RequireUpdateAll;
+import dk.digitalidentity.security.annotations.crud.RequireUpdateOwnerOnly;
+import dk.digitalidentity.security.annotations.sections.RequireRegister;
 import dk.digitalidentity.service.AssetService;
 import dk.digitalidentity.service.ChoiceService;
 import dk.digitalidentity.service.DataProcessingService;
@@ -85,7 +89,7 @@ import static dk.digitalidentity.util.ComplianceStringUtils.asNumber;
 
 @Slf4j
 @Controller
-@RequireUser
+@RequireRegister
 @RequestMapping("registers")
 @RequiredArgsConstructor
 public class RegisterController {
@@ -105,14 +109,15 @@ public class RegisterController {
 	private final KLEGroupService kLEGroupService;
 	private final KLELegalReferenceService kLELegalReferenceService;
 
+	@RequireReadOwnerOnly
 	@GetMapping
 	public String registerList(Model model) {
 		Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-		model.addAttribute("superuser", authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals(Roles.SUPERUSER)));
+		model.addAttribute("superuser", authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals(Roles.SUPER_USER)));
 		return "registers/index";
 	}
 
-
+	@RequireCreateOwnerOnly
     @GetMapping("form")
     public String form(final Model model, @RequestParam(name = "id", required = false) final Long id) {
         if (id == null) {
@@ -131,7 +136,7 @@ public class RegisterController {
         return "registers/form";
     }
 
-    @RequireSuperuserOrAdministrator
+    @RequireCreateOwnerOnly
     @Transactional
     @PostMapping("create")
     public String create(@ModelAttribute @Valid final Register register) {
@@ -139,6 +144,7 @@ public class RegisterController {
         return "redirect:/registers/" + saved.getId();
     }
 
+	@RequireUpdateOwnerOnly
 	@Transactional
 	@PostMapping("{id}/assessment")
 	public String updateAssessment(@PathVariable final Long id,
@@ -177,7 +183,7 @@ public class RegisterController {
 			assessment.setId(null);
 			final Register register = registerService.findById(id)
 					.orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
-			if(authentication.getAuthorities().stream().noneMatch(r -> r.getAuthority().equals(Roles.SUPERUSER) && register.getResponsibleUsers().stream().map(User::getUuid).toList().contains(SecurityUtil.getPrincipalUuid()))) {
+			if(authentication.getAuthorities().stream().noneMatch(r -> r.getAuthority().equals(Roles.SUPER_USER) && register.getResponsibleUsers().stream().map(User::getUuid).toList().contains(SecurityUtil.getPrincipalUuid()))) {
 				throw new ResponseStatusException(HttpStatus.FORBIDDEN);
 			}
 			assessment.setRegister(register);
@@ -203,7 +209,7 @@ public class RegisterController {
 		// Find columns to remove (exist in current but not in incoming)
 		List<OrganisationAssessmentColumn> toRemove = existingColumns.stream()
 				.filter(col -> !incomingByChoiceValueId.containsKey(col.getChoiceValue().getId()))
-				.collect(Collectors.toList());
+				.toList();
 
 		// Remove columns that are no longer present
 		existingColumns.removeAll(toRemove);
@@ -237,6 +243,7 @@ public class RegisterController {
 		}
 	}
 
+	@RequireUpdateOwnerOnly
     @PostMapping("{id}/update")
 	public String update(@PathVariable final Long id,
 			@RequestParam(value = "showIndex", required = false, defaultValue = "false") final boolean showIndex,
@@ -323,6 +330,7 @@ public class RegisterController {
         return showIndex ? "redirect:/registers" : "redirect:/registers/" + id + (section != null ? "?section=" + section : "");
     }
 
+	@RequireUpdateOwnerOnly
     @Transactional
     @PostMapping("{id}/purpose")
     public String purpose(
@@ -368,6 +376,7 @@ public class RegisterController {
         return "redirect:/registers/" + id + "?section=purpose";
     }
 
+	@RequireUpdateOwnerOnly
     @Transactional
     @PostMapping("{id}/dataprocessing")
     public String dataProcessing(@PathVariable final Long id, @Valid @ModelAttribute final DataProcessingDTO body) {
@@ -379,6 +388,7 @@ public class RegisterController {
         return "redirect:/registers/" + id + "?section=dataprocessing";
     }
 
+	@RequireReadOwnerOnly
     @GetMapping("{id}")
     public String view(final Model model, @PathVariable final Long id,
                        @RequestParam(required = false) final String section) {
@@ -430,7 +440,7 @@ public class RegisterController {
 
         model.addAttribute("section", section);
 		model.addAttribute("changeableRegister", (authentication.getAuthorities().stream()
-				.anyMatch(r -> r.getAuthority().equals(Roles.SUPERUSER) || r.getAuthority().equals(Roles.ADMINISTRATOR))
+				.anyMatch(r -> r.getAuthority().equals(Roles.SUPER_USER) || r.getAuthority().equals(Roles.ADMINISTRATOR))
 				|| register.getResponsibleUsers().stream().anyMatch(user -> user.getUuid().equals(SecurityUtil.getPrincipalUuid())))
 				|| register.getCustomResponsibleUsers().stream().anyMatch(user -> user.getUuid().equals(SecurityUtil.getPrincipalUuid()))
 		);
@@ -472,7 +482,7 @@ public class RegisterController {
         model.addAttribute("consequenceScale", scaleService.getConsequenceNumberDescriptions());
         model.addAttribute("relatedAssetsSubSuppliers", assetSupplierMappingList);
 		model.addAttribute("risk", new ThreatAssessment());
-		model.addAttribute("superuser", authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals(Roles.SUPERUSER)));
+		model.addAttribute("superuser", authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals(Roles.SUPER_USER)));
 
         model.addAttribute("organisationAssessmentColumnTypes", getOrganisationAssessmentColumnTypes());
         model.addAttribute("organisationAssessmentMap", getOrganisationAssessmentMap(assessment));
@@ -537,7 +547,7 @@ public class RegisterController {
 				legalReference.getParagraph());
 	}
 
-    @RequireSuperuserOrAdministrator
+    @RequireDeleteAll
     @DeleteMapping("{id}")
     @ResponseStatus(value = HttpStatus.OK)
     @Transactional
@@ -553,6 +563,7 @@ public class RegisterController {
         registerService.delete(register);
     }
 
+	@RequireUpdateAll
     @GetMapping("{id}/relations/{relatedId}/{relatedType}")
     @Transactional
     public String editRelation(final Model model, @PathVariable final long id, @PathVariable final long relatedId, @PathVariable final RelationType relatedType) {
@@ -579,7 +590,7 @@ public class RegisterController {
     private static void ensureEditingIsAllowed(final Register register) {
         final Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if(authentication.getAuthorities().stream()
-				.noneMatch(r -> r.getAuthority().equals(Roles.SUPERUSER))
+				.noneMatch(r -> r.getAuthority().equals(Roles.SUPER_USER))
 				&& !register.getResponsibleUsers().stream().map(User::getUuid).toList().contains(SecurityUtil.getPrincipalUuid())
 				&& !register.getCustomResponsibleUsers().stream().map(User::getUuid).toList().contains(SecurityUtil.getPrincipalUuid())
 		) {
